[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
opt = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false


[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
