[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
nom = "7.1.3"
num-traits = "0.2.17"
rayon = "1.8.0"
rstest = "0.18.2"
pathfinding = "4.6.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benching"
harness = false
